syntax = "proto3";

package org.search.protos;

service SearchRemote {
  rpc Search (SearchRemoteRequest) returns (SearchRemoteReply) {}
}

message SearchRemoteRequest {
  string phrase = 1;
}

message SearchRemoteReply {
  string result = 1;
}